[tool.poetry]
name = "qmss-sl-practice"
version = "0.1.0"
description = "This is a practice package."
authors = ["Shiying Lai <sl4849@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
